--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "israeli-society",
   "version": "0.1.0",
-  "homepage": "https://inri-pkrf.github.io/israeli-society",
+  "homepage": "https://inri-pkrf.github.io/israeli-society-copy",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -41,6 +41,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.2.0"
+    "gh-pages": "^6.3.0"
   }
 }
